--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,19 @@
             android:theme="@style/Theme.T1PM"
             tools:targetApi="31">
         <activity
+                android:name=".Activity4"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value="" />
+        </activity>
+        <activity
                 android:name=".Activity3"
                 android:exported="true">
             <meta-data
@@ -27,6 +40,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                     android:name="android.app.lib_name"
                     android:value="" />
@@ -34,7 +48,6 @@
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
-
             <meta-data
                     android:name="android.app.lib_name"
                     android:value="" />
